# object-recognition

./: CMakeLists.txt  Grabber.cpp  Grabber.h  LICENSE  PointCloudOperations.cpp  PointCloudOperations.h  PointCloudOperationsCUDA.cu  PointCloudOperationsCUDA.h  README.md  Recognizer.cpp  Recognizer.h  Settings.cpp  Settings.h  Types.h  Utils.cpp  Utils.h  main.cpp
